force-app/main/default/objects/A360_Map_Connection__c/A360_Map_Connection__c.object-meta.xml
<CustomObject>
    <description
  >Visual connection between two estate map areas, such as a path, gate, or shared fence.</description>
    <label>Map Connection</label>
    <nameField>
        <label>Map Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>