force-app/main/default/objects/A360_Map_Connection__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <description>Type of connection between spaces.</description>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Path</fullName>
                <default>true</default>
                <label>Path</label>
            </value>
            <value>
                <fullName>Gate</fullName>
            </value>
            <value>
                <fullName>Corridor</fullName>
            </value>
            <value>
                <fullName>Shared Fence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>