force-app/main/default/objects/A360_Map_Connection__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Ordering hint for rendering connections.</description>
    <label>Display Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>