force-app/main/default/objects/A360_Map_Connection__c/fields/Estate_Map__c.field-meta.xml
<CustomField>
    <fullName>Estate_Map__c</fullName>
    <description>Estate map that owns this connection.</description>
    <label>Estate Map</label>
    <referenceTo>A360_Estate_Map__c</referenceTo>
    <relationshipLabel>Map Connections</relationshipLabel>
    <relationshipName>Map_Connections</relationshipName>
    <type>MasterDetail</type>
</CustomField>