force-app/main/default/objects/A360_Map_Connection__c/fields/From_Area__c.field-meta.xml
<CustomField>
    <fullName>From_Area__c</fullName>
    <description>Starting map area for this connection.</description>
    <label>From Area</label>
    <referenceTo>A360_Map_Area__c</referenceTo>
    <relationshipLabel>Connections From Area</relationshipLabel>
    <relationshipName>Connections_From_Area</relationshipName>
    <type>Lookup</type>
</CustomField>