force-app/main/default/objects/A360_Map_Connection__c/fields/Stroke_Color__c.field-meta.xml
<CustomField>
    <fullName>Stroke_Color__c</fullName>
    <description>Hex color used for this connection line.</description>
    <label>Stroke Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>