force-app/main/default/objects/A360_Map_Connection__c/fields/To_Area__c.field-meta.xml
<CustomField>
    <fullName>To_Area__c</fullName>
    <description>Ending map area for this connection.</description>
    <label>To Area</label>
    <referenceTo>A360_Map_Area__c</referenceTo>
    <relationshipLabel>Connections To Area</relationshipLabel>
    <relationshipName>Connections_To_Area</relationshipName>
    <type>Lookup</type>
</CustomField>